--- a/liteapi-map-sdk/package.json
+++ b/liteapi-map-sdk/package.json
@@ -6,21 +6,20 @@
   "module": "dist/liteapi-map-sdk.es.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
-    "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview",
-      "type-check": "tsc --noEmit",
-      "test": "vitest",
-      "test:ui": "vitest --ui",
-      "test:coverage": "vitest --coverage"
-    }
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "Kasia Wrzesniak",
   "license": "ISC",
   "devDependencies": {
     "@vitest/ui": "^4.0.6",
+    "@vitest/web-worker": "^4.0.6",
     "jsdom": "^27.1.0",
     "tsx": "^4.20.6",
     "vitest": "^4.0.6"
