--- a/liteapi-map-sdk/tsconfig.json
+++ b/liteapi-map-sdk/tsconfig.json
@@ -15,6 +15,6 @@
       "resolveJsonModule": true,
       "allowSyntheticDefaultImports": true
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "demo"],
     "exclude": ["node_modules", "dist", "demo"]
   }
