--- a/liteapi-map-sdk/package.json
+++ b/liteapi-map-sdk/package.json
@@ -16,7 +16,21 @@
     "format:fix": "prettier . --write",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "test:node18": "node --version | grep -q 'v1[89]' || (echo 'Tests require Node 18+. Use: nvm use 18 && npm test' && exit 1) && vitest",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,css,html}": [
+      "prettier --write"
+    ]
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "Kasia Wrzesniak",
@@ -25,16 +39,19 @@
     "@eslint/js": "^9.39.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
-    "@vitest/ui": "^4.0.6",
-    "@vitest/web-worker": "^4.0.6",
+    "@vitest/ui": "^0.34.6",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.1.0",
+    "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.6"
+    "vite": "^4.5.3",
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "mapbox-gl": "^3.16.0"
